--- a/flights.html
+++ b/flights.html
@@ -8,7 +8,7 @@
 <body>
 
 <header>
-    <h1>Book Your Flight</h1>
+    <h1>FlightTick </h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="catalog.html">Country & Tours</a>
